most of the effects for the Ausgleich are in

--- a/localisation/KR_Austria_Ausgleich_new_l_english.yml
+++ b/localisation/KR_Austria_Ausgleich_new_l_english.yml
@@ -74,7 +74,7 @@ ausgleich.new.342.t:0 "Result of the Ausgleich: Slovak State granted"
 ausgleich.new.343.t:0 "Delegation returns from the Ausgleich"
 ausgleich.new.344.t:0 "Result of the Ausgleich: Transcarpathia granted"
 ausgleich.new.345.t:0 "Delegation returns from the Ausgleich"
-ausgleich.new.346.t:0 "Result of the Ausgleich: Banate granted"
+ausgleich.new.346.t:0 "Result of the Ausgleich: Backa granted"
 ausgleich.new.347.t:0 "Delegation returns from the Ausgleich"
 
 ausgleich.new.350.t:0 "The Ausgleich Negotiations are over"
@@ -83,7 +83,7 @@ ausgleich.new.352.t:0 "Result of the Ausgleich: Slovak State granted"
 ausgleich.new.353.t:0 "Delegation returns from the Ausgleich"
 ausgleich.new.354.t:0 "Result of the Ausgleich: Transcarpathia granted"
 ausgleich.new.355.t:0 "Delegation returns from the Ausgleich"
-ausgleich.new.356.t:0 "Result of the Ausgleich: Banate granted"
+ausgleich.new.356.t:0 "Result of the Ausgleich: Backa granted"
 ausgleich.new.357.t:0 "Delegation returns from the Ausgleich"
 
 ausgleich.new.360.t:0 "Slovak and Romanian Nationalism"
