--- a/localisation/KR_Austria_Ausgleich_new_l_english.yml
+++ b/localisation/KR_Austria_Ausgleich_new_l_english.yml
@@ -114,6 +114,7 @@ ausgleich.new.361.t:0 "Slovak Nationalism"
 ausgleich.new.362.t:0 "Romanian Nationalism"
 ausgleich.new.363.t:0 "Slovak and Romanian demonstrations put down in Hungary"
 ausgleich.new.364.t:0 "Slovak demonstrations put down in Hungary"
-ausgleich.new.365.t:0 "Austria demands our Authorities to evacuate Slovakia and Transylvania"
-ausgleich.new.366.t:0 "Austria demands our Authorities to evacuate Slovakia"
-ausgleich.new.367.t:0 "Austria demands our Authorities to evacuate Transylvania"
+ausgleich.new.364.t:0 "Romanian demonstrations put down in Hungary"
+ausgleich.new.366.t:0 "Austria demands our Authorities to evacuate Slovakia and Transylvania"
+ausgleich.new.367.t:0 "Austria demands our Authorities to evacuate Slovakia"
+ausgleich.new.368.t:0 "Austria demands our Authorities to evacuate Transylvania"
