--- a/localisation/KR_Austria_Ausgleich_new_l_english.yml
+++ b/localisation/KR_Austria_Ausgleich_new_l_english.yml
@@ -66,10 +66,26 @@ ausgleich.new.314.b:0 "We cannot ask this of the Hungarians here and now."
 ausgleich.new.314.c:0 "It should be done. Let us work towards it."
 
 ausgleich.new.315.t:0 "Czechs and Slovaks propose a Slovak State"
+ausgleich.new.315.a:0 "The Hungarian delegation should consider this."
+ausgleich.new.315.b:0 "Yes, it shall happen..."
+ausgleich.new.315.c:0 "...and it shall touch the Danube."
+
 ausgleich.new.316.t:0 "The Polish propose a Polish Protectorate"
+ausgleich.new.316.a:0 "We shall consider this."
+
 ausgleich.new.317.t:0 "The Ruthenians demand Transcarpathia"
-ausgleich.new.318.t:0 "Illyria demands the Banate"
+ausgleich.new.317.a:0 "The Hungarian delegation should consider this."
+ausgleich.new.317.b:0 "Yes, it shall happen."
+
+ausgleich.new.318.t:0 "Illyria demands Backa"
+ausgleich.new.318.a:0 "The Hungarian delegation should consider this."
+ausgleich.new.318.b:0 "Yes, it shall happen..."
+ausgleich.new.318.c:0 "...and it shall include all of Backa."
+
 ausgleich.new.319.t:0 "The Romanians demands Transylvania"
+ausgleich.new.319.a:0 "The Hungarian delegation should consider this."
+ausgleich.new.319.b:0 "Yes, it shall happen..."
+ausgleich.new.319.c:0 "...and it shall include all of Transylvania."
 
 
 
