Ukrainian focus tree - additions

--- a/localisation/KR_Ukraine_l_english.yml
+++ b/localisation/KR_Ukraine_l_english.yml
@@ -147,7 +147,7 @@ ukraine.9.d:0 "The agricultural crisis has almost shattered an Ukrainian economy
 ukraine.9.a:0 "Ukraine has not yet died!"
 ukraine.10.t:0 "Khrushchev's Speech"
 ukraine.10.d:0 "As one of the few Social Democrats in the Rada, Nikita Khrushchev wields an extremely powerful influence over the Ukrainian peasantry. He has taken advantage of our troubles in a recent speech, where he has called openly for sweeping land reforms, an extension of the electoral franchise and an end to landlord dominance in the countryside. These demands are extremely popular among the lower classes, and are giving them dangerous ideas. But maybe we can use Khrushchev and allow him to start some unpopular among the landlords reforms in the economy, which we must do anyway."
-ukraine.10.a:0 "Dismiss Skorapadsky and invite Khrushchev to head a popular government."
+ukraine.10.a:0 "Dismiss Skoropadsky and invite Khrushchev to head a popular government."
 ukraine.11.t:0 "The Language Issue"
 ukraine.11.d:0 "Nikita Khrushchev has headed the government during the strongest crisis since 1918. But before improving the economical problems, Nikita Khrushchev has to do something about the pro-Russian movements, which try to influence our electorate in the most industrial-developed parts of Ukraine. One of the biggest domestic problems existing in Ukraine is the language question. De-facto the Russian language is used by majority of the population, but the usage is prohibited in the state institutions."
 ukraine.11.a:0 "Make Russian the second official state language."
@@ -282,6 +282,26 @@ ukraine.48.t:0 "Romania refuses!
 ukraine.48.d:0 "Romanian King published a note, where he insists that Bessarabia is rightfully Romanian territory, and Ukraine will never get this region. The only solution of this problem for us is the war with Romanian Monarchists"
 ukraine.48.a:0 "Then it is war"
 ukraine.48.b:0 "We don't need Bessarabia"
+ukraine.52.t:0 "An Heir to King Vasily?"
+ukraine.52.d:0 "Unfortunately, our King has no children and as such he has to choose his successor. Only two candidatures are considered by the government and ministers - the nephew of Vasily, Leo Stefan Habsburg and Daniil Skoropadsky, son of our Hetman. 'ViN' and 'OUN' support Daniil as they believe he will weaken Ukrainian dependence on Mitteleuropa. Leo has support only from Skoropadsky`s opponents and employers, who have connections with Germany and Austria. Whom will we choose?"
+ukraine.52.a:0 "Leo Stefan Habsburg!"
+ukraine.52.b:0 "Daniil Skoropadsky!"
+ukraine.53.t:0 "A New Minister of Security?"
+ukraine.53.d:0 "Igor Kistyakovsky, who has been our minister of Security since 1918, had to retire from his post because of his poor health. 'Faith and Nation' and 'Organisation of the Ukrainian nationalists' started immediately to fight for this top position in the government because each party hopes to control Ukrainian internal policy. We have to give 'ViN' or 'OUN' this post, according to our agreement, which were concluded before the elections."
+ukraine.53.a:0 "Vladimir Khitrovo from 'ViN'"
+ukraine.53.b:0 "Vladimir Chekhovsky from 'OUN'"
+ukraine.53.c:0 "Daniil Skoropadsky, son of our Hetman"
+ukraine.54.t:0 "Explosion on the Dnieper"
+ukraine.54.d:0 "Today at 11 a.m. when our King Vasily was on his yacht, an explosion rips apart his small ship. Our minister of security got a message that the yacht of His Majesty was mined by a syndicalist group, which had decided to keep up their struggle against our government after their loss at the elections. Unfortunately, there was no chance to save our King, and different political groups want to use this chance and begin to govern Ukraine."
+ukraine.54.a:0 "Long live Leo Stefan! And his supporters from 'ViN'..."
+ukraine.54.b:0 "Long live Leo Stefan! And his supporters from 'OUN'..."
+ukraine.54.c:0 "Long live Leo Stefan! And our Hetman Skoropadsky..."
+ukraine.54.e:0 "Long live Leo Stefan! And the landowners..."
+ukraine.55.d:0 "Today at 11 a.m. when our King Vasily was on his yacht, an explosion rips apart his small ship. Our minister of security got a message that the yacht of His Majesty was mined by a syndicalist group, which had decided to keep up their struggle against our government after their loss at the elections. Unfortunately, there was no chance to save our King, and different political groups want to use this chance and begin to govern Ukraine."
+ukraine.55.a:0 "Long live Daniil! And his supporters from 'ViN'..."
+ukraine.55.b:0 "Long live Daniil! And his supporters from 'OUN'..."
+ukraine.55.c:0 "Long live Daniil! And our Hetman Skoropadsky..."
+ukraine.55.e:0 "Long live Daniil! And the landowners..."
 
 ### Focuses ###
 
@@ -308,7 +328,7 @@ UKR_Remove_Khrushchev:0 "Red Resistance"
 UKR_Remove_Khrushchev_desc:0 "Nikita Khrushchev has gained too much power in the country and the King has decided to remove him from office before it's too late. But the peasants and workers haven't forgotten their leader, who had promised a great future for Ukraine. The attacks on the police by the syndicalist rebels happen almost every week. We must do something to prevent a great crisis!"
 
 UKR_Broad_Coalition:0 "Coalition is formed"
-UKR_Broad_Coalition_desc:0 "Realising the syndicalist threat, Hetman Skorapadsky decided to strike a bargain with the pro-Russian 'ViN' and nationalist 'OUN'. Both parties will get freedom of action in the regions, where they are especially popular, but in return they will support Skoropadsky's regime and our king."
+UKR_Broad_Coalition_desc:0 "Realising the syndicalist threat, Hetman Skoropadsky decided to strike a bargain with the pro-Russian 'ViN' and nationalist 'OUN'. Both parties will get freedom of action in the regions, where they are especially popular, but in return they will support Skoropadsky's regime and our king."
 UKR_Rightist_Government:0 "'ViN' and 'OUN' Commence Reforms"
 UKR_Rightist_Government_desc:0 "Members of 'Faith and Nation' and 'Organisation of the Ukrainian nationalists' have begun to replace old officials of the Hetman's period in the regions. Surprisingly, it has had a positive effect on our economy, because new local governments are ready to solve problems of their towns and villages."
 UKR_ViN_Russophiles:0 "Church and Nation"
@@ -327,7 +347,7 @@ UKR_Crisis_Coalition:0 "Crisis in the Coalition"
 UKR_Crisis_Coalition_desc:0 "Though the Syndicalist threat doesn't exist anymore, but 'ViN' and 'OUN' gained too much popularity among the citizens of Ukraine and almost ready to split our country into two parts. We have to do something with it, since the situation in Europe and in the World is really disturbing."
 
 UKR_Dissolve_Rada:0 "Dissolve the Rada"
-UKR_Dissolve_Rada_desc:0 "Our Supreme Rada (Parliament) has always been too left and never really supported Skorapadsky's policy. But now the King has given Skorapadsky authority to dissolve the Rada and form instead a State Senate, where should be represented only the loyal to the regime peasants and the officials from different Ukrainian regions."
+UKR_Dissolve_Rada_desc:0 "Our Supreme Rada (Parliament) has always been too left and never really supported Skoropadsky's policy. But now the King has given Skoropadsky authority to dissolve the Rada and form instead a State Senate, where should be represented only the loyal to the regime peasants and the officials from different Ukrainian regions."
 UKR_Skoropadsky_Policy:0 "Ukrainian Unity"
 UKR_Skoropadsky_Policy_desc:0 "The relations between the Russians and the Ukrainians in Ukraine are good enough, but various powers try to depict them as an eternal struggle between the West and the East. We must stop this chauvinistic propaganda, but our aim is also to show that despite the common past and good relations with Russia, we are independent now and will always be."
 UKR_Army_Reforms:0 "Professional Army"
