Manufacturers names for Flanders and Wallonia

--- a/localisation/KR_Companies_l_english.yml
+++ b/localisation/KR_Companies_l_english.yml
@@ -891,7 +891,7 @@ Kaiserliche_werft_wilhelmshaven:0 "Kaiserliche Werft Wilhelmshaven"
 schichau_werke:0 "Schichau-Werke"
 vulcan_stettin:0 "AG Vulcan Stettin"
 
-### Flanders-Wallonia ###
+###flanders-wallonia ###
 cockerill:0 "Cockerill"
 societe_belge_radio:0 "Société Belge Radio-électrique"
 solvay:0 "Solvay"
@@ -906,6 +906,36 @@ avions_fairey:0 "Avions Fairey"
 sabca:0 "SABCA"
 stampe_vertongen:0 "Stampe et Vertongen"
 boel_zonen:0 "J. Boel & Zonen"
+mecar:0 "Mecar"
+forges_de_zeebruges:0 "Forges de Zeebruges"
+brossel:0 "Brossel"
+miesse:0 "Miesse"
+cockerill_scheepwerfen:0 "Cockerill Scheepwerfen"
+
+###wallonia ###
+cockerill_WLL:0 "Cockerill"
+acec_WLL:0 "Ateliers de constructions électriques de Charleroi"
+societe_belge_radio_WLL:0 "Société Belge Radio-électrique"
+
+fabrique_nationale_WLL:0 "Fabrique Nationale"
+fonderie_royale_canons_WLL:0 "Fonderie Royale de Canons"
+imperia_WLL:0 "Imperia Automobiles"
+familleureux_WLL:1 "Familleureux"
+la_brugeoise:0 "La Brugeoise"
+avions_fairey_WLL:0 "Avions Fairey"
+sabca_WLL:0 "SABCA"
+
+###Flanders ###
+solvay_FLN:0 "Solvay"
+renard_FLN:0 "Renard"
+stampe_vertongen_FLN:0 "Stampe et Vertongen"
+boel_zonen_FLN:0 "J. Boel & Zonen"
+mecar_FLN:0 "Mecar"
+minerva_FLN:0 "Minerva"
+forges_de_zeebruges_FLN:0 "Zeebrugge Smederijen"
+brossel_FLN:0 "Brossel"
+miesse_FLN:0 "Miesse"
+cockerill_scheepwerfen_FLN:0 "Cockerill Scheepwerfen"
 
 ### Serbia ###
 sartid:0 "SARTID"
