--- a/localisation/KR_Dominion_of_India_l_english.yml
+++ b/localisation/KR_Dominion_of_India_l_english.yml
@@ -428,6 +428,7 @@ delhi.204.a:0 "Jai Hind!"
 delhi.205.t:0 "Tribhuvan's Tryst With Destiny"
 delhi.205.d:0 "In the West, Dominion forces are preparing to come to the aid of the rioting protesters in Dehradun, who have risen in response to a massacre orchestrated by the occupying police garrison. Nepalese army formations are deemed completely impotent in the face of such a modern foe and our intelligence detail among the underground local wing of the INC states that plans of open revolt are hatching in the East as well. A partition of the Nepalese occupied territories thus seems all but imminent. It seems that it will come easily with a dose of proletarian intimidation."
 delhi.205.a:0 "The Indian Red Army shall sweep into the Ganges-Yamuna Basin!"
+delhi.205.b:0 "Yak herders mean nothing to the revolution!"
 delhi.206.t:0 "The Red Army on the Move"
 delhi.206.d:0 "Just as we thought things couldn't get worse, our garrisons in Gangtok and Muzaffarpur report a great amount of troop movement on the border to the East. Undoubtedly a sign that the Bolshevik rabble in Calcutta aims at taken back the territories lost during the Indian Civil War. Sadly, it seems that we are all but powerless in the face of the prospect of a two-front war."
 delhi.206.a:0 "Surrender the eastern occupied lowlands"
