--- a/localisation/KR_Egypt_l_english.yml
+++ b/localisation/KR_Egypt_l_english.yml
@@ -189,11 +189,15 @@ egy.29.d:0 "With eruption of the new grand conflict in Europe, German Empire has
 egy.29.a:0 "Declare war on the Ottomans!"
 egy.29.b:0 "We are not ready..."
 
-egy.30.t:0 "Arabian Block declares war on us!"
-egy.30.d:0 "The Arabian bloc decided to use the uprising in Kurdistan to completely destroy our Empire. In response to this act, several Arab cities erupted in open revolt. Mobs began burning down Ottoman institutions and raided police and military bases. From Baghdad to Jerusalem, Arabs have risen up against the Ottoman Empire!"
+egy.30.t:0 "Arabian Bloc declares war on us!"
+egy.30.d:0 "The Arabian Bloc has treacherously attacked us. Their declared goal is to completely destroy our Empire. In response to this act, several Arab cities erupted in open revolt. Mobs began burning down Ottoman institutions and raided police and military bases. From Baghdad to Jerusalem, Arabs have risen up against the Ottoman Empire!"
 egy.30.a:0 "We shall crush them!"
 
-egy.31.t:0 "Arabian block declares war on the Ottomans!"
-egy.31.d:0 "The recent uprising in Kurdistan is viewed as a sign that the days of the Ottoman Empire are numbered. This event was used by the armed forces of the Arabian bloc, which are steadily advancing into Ottoman territories. Now that the days of the Ottoman Empire are numbered, shall we finally realize our long-term plans and liberate our Shiite brethren or shall we wait for a better time?"
-egy.31.a:0 "Declare war on the Ottomans!"
-egy.31.b:0 "We are not ready..."
+egy.30.t:0 "Arabian Bloc declares war on us!"
+egy.30.d:0 "The Arabian Bloc has treacherously attacked us. Their declared goal is to completely destroy our state. In response to this act, several Arab cities erupted in open revolt. Mobs began burning down Turkish institutions and raided police and military bases. From Baghdad to Jerusalem, Arabs have risen up against the Republic of Turkey!"
+egy.30.a:0 "We shall crush them!"
+
+egy.32.t:0 "Arabian block declares war on the Ottomans!"
+egy.32.d:0 "The recent uprising in Kurdistan is viewed as a sign that the days of the Ottoman Empire are numbered. This event was used by the armed forces of the Arabian bloc, which are steadily advancing into Ottoman territories. Now that the days of the Ottoman Empire are numbered, shall we finally realize our long-term plans and liberate our Shiite brethren or shall we wait for a better time?"
+egy.32.a:0 "Declare war on the Ottomans!"
+egy.32.b:0 "We are not ready..."
