--- a/localisation/KR_Ottoman_l_english.yml
+++ b/localisation/KR_Ottoman_l_english.yml
@@ -77,6 +77,7 @@ OTT_hurkus_unlocked_tt:0 "§GHürkuş unlocked§!\n"
 OTT_golcuk_unlocked_tt:0 "§GGölcük Dockyards unlocked§!\n"
 axis_defeated:0 "Arabian Axis Defeated"
 ott_german_embargo:0 " German Embargo"
+ott_civil_war_tt:0 "§RCivil war breaks out between the Rebels and Osman Fuad§!"
 OTT_executions1_tt:0 "§YAli İhsan Paşa§! is executed \nRebel officers are executed \nTF Paramilitary units are executed \n"
 OTT_executions2_tt:0 "§YMehmed Cavid§! is executed \n§YFilibeli Hilmi§! is executed \n§YKara Kemal§! is executed \n§YAbdülkadir§! is executed \n§YYenibahçeli Nail§! is executed \n§YDoktor Nazım§! is executed \n"
 
@@ -1120,3 +1121,25 @@ ott.177.a:0 "Such scheming will not go unpunished..."
 ott.178.t:0 "Victory Day!"
 ott.178.d:0 "Our magnificent Sultan has declared today a day of celebration, in recognition of our glorious victory over the rebellious Arab states."
 ott.178.a:0 "May our army be ever-triumphant!"
+
+ott.179.t:0 "The Treaty of Baghdad"
+ott.179.d:0 "We've been beaten by the armed forces of Persia. How did this happen? They've captured all our territory east of Euphrates and even occupied parts of Anatolia! We should offer peace to them while we can!"
+ott.179.a:0 "Offer peace treaty, recognising Persian territorial gains."
+ott.179.b:0 "No, the war will continue until we march through Tehran!"
+
+ott.180.t:0 "The Treaty of Baghdad"
+ott.180.d:0 "We've successfully beaten the armed forces of the Ottoman Empire and conquered large parts of their empire. Now the humiliated Ottoman leadership offers us peace in which they promise to recognise our territorial gains and withdraw from the disputed territory. How shall we react?"
+ott.180.a:0 "Accept the proposal, this is more than we hoped!"
+ott.180.b:0 "No, the war will continue until our army marches through Kostantiniyye!"
+
+ott.181.t:0 "The Treaty of Baghdad"
+ott.181.d:0 "According to the Treaty of Baghdad we must withdraw our force from the remaining parts of our ceded provinces..."
+ott.181.a:0 "How humiliating!"
+
+ott.182.t:0 "Persia refused to sign the treaty!"
+ott.182.d:0 "Persia refused our generous peace offer and renewed military actions..."
+ott.182.a:0 "They will pay for this..."
+
+ott.183.t:0 "New Territories"
+ott.183.d:0 "The Arabian bloc was successful in its conflict with the Ottoman Empire, but the Ottomans surrendered to the Persian Empire. Persians annexed all land east of Euphrates to their Empire. We are also victorious, but all we got was this empty desert!"
+ott.183.a:0 "The Persians will pay for their insolence..."
