--- a/localisation/KR_Turkey_l_english.yml
+++ b/localisation/KR_Turkey_l_english.yml
@@ -3,7 +3,7 @@
 ### Opinion Modifiers ###
 tur_syndie:0 "Syndicalist diplomacy"
 tur_irredentism:0 "Turkish Belligerence"
-tur_peaceful:0 "Peace in the World"
+tur_peaceful:0 "Peace in the world"
 ### Tooltips ###
 
 ### Ideas ###
