Chinese annexations events: they should all work well and nicely now, report any weird thing kthx

--- a/localisation/KR_Annexations_l_english.yml
+++ b/localisation/KR_Annexations_l_english.yml
@@ -692,6 +692,37 @@ annex.175.a:0 "Transfer it to Poland"
 annex.175.b:0 "Transfer it to the German Union"
 annex.175.c:0 "Transfer it to Prussia"
 annex.175.e:0 "Transfer it to the Commonwealth"
+annex.176.t:0 "Fate of the North-Western China"
+annex.176.d:0 "After our successful campaign in the steppes of North-Western China we now have the task to establish new local administrative authority in order to restore peace, however there are several options for our choice..."
+annex.176.a:0 "Continue with military occupation!"
+annex.176.b:0 "Hand these territories to our loyal ally..."
+annex.176.c:0 "Liberate a loyal Xibei San Ma"
+annex.176.e:0 "Liberate Uyghuria and Xibei San Ma"
+annex.177.t:0 "Fate of Mongolia"
+annex.177.d:0 "After our successful campaign in the steppes of Mongolia and beating down the mad baron we now have the task to establish new local administrative authority in order to restore peace, however there are several options for our choice..."
+annex.177.a:0 "Continue with military occupation!"
+annex.177.b:0 "Hand these territories to our loyal ally..."
+annex.177.c:0 "Liberate a loyal Mongolia"
+annex.177.e:0 "Return the Transsiberian to Russia and liberate Mongolia"
+annex.178.t:0 "Fate of Manchuria"
+annex.178.d:0 "After our successful campaign in Manchuria we now have the task to establish new local administrative authority in order to restore peace, however there are several options for our choice..."
+annex.178.a:0 "Continue with military occupation!"
+annex.178.b:0 "Liberate a Fengtian government"
+annex.178.c:0 "Support the local republican movement!"
+annex.178.e:0 "Establish a federation of trade unions!"
+annex.178.f:0 "Hand these territories to our loyal ally..."
+annex.179.t:0 "Fate of Shangqing"
+annex.179.d:0 "After our successful campaign in the mountains of Shaanxi we now have the task to establish new local administrative authority in order to restore peace, however there are several options for our choice..."
+annex.179.a:0 "Continue with military occupation!"
+annex.179.b:0 "Liberate a loyal Shangqing Tianguo"
+annex.179.c:0 "Support the local republican movement!"
+annex.179.e:0 "Establish a federation of trade unions!"
+annex.179.f:0 "Hand these territories to our loyal ally..."
+annex.180.t:0 "The Concessions of China"
+annex.180.d:0 "After the seizure of some of the coastal cities of China once controlled by European powers or International conglomerates we found ourselves with a decision to make. Should we keep them or give them to our loyal allies?"
+annex.180.a:0 "Continue with military occupation!"
+annex.180.b:0 "Hand these territories to our loyal ally..."
+annex.180.c:0 "The AoG is the perfect fit to manage them!"
 
 ### Opinion Modifiers ###
 refused_prince:0 "Refused prince"
