Ukraine + Kornilov = Corny Love

--- a/localisation/KR_Ukraine_l_english.yml
+++ b/localisation/KR_Ukraine_l_english.yml
@@ -302,7 +302,37 @@ ukraine.55.a:0 "Long live Daniil! And his supporters from 'ViN'..."
 ukraine.55.b:0 "Long live Daniil! And his supporters from 'OUN'..."
 ukraine.55.c:0 "Long live Daniil! And our Hetman Skoropadsky..."
 ukraine.55.e:0 "Long live Daniil! And the landowners..."
-
+ukraine.61.t:0 "Treaty of Pereyaslav"
+ukraine.61.d:0 "Since the fall of the Russian Empire, both Russia and the Ukraine have been independent, but also rather weak states. Now, with both Russia and Ukraine having reached domestic stability, more and more citizens from both states are calling for reunification. Although it could lead to a split with Mitteleuropa this might be the one great chance for Great and Little Russia to reunite into a resurgent Greater Russia - a state that confidently can oppose Germanic hegemony in Eastern Europe."
+ukraine.61.a:0 "Together with Russia, the Ukraine shall prosper for a thousand years!"
+ukraine.61.b:0 "Let's remain our independence!"
+ukraine.62.t:0 "Ratification of the Treaty of Pereyaslav"
+ukraine.62.d:0 "Since the fall of the Russian Empire, both Russia and the Ukraine have been independent, but also rather weak states. Now, with both Russia and Ukraine having reached domestic stability, more and more citizens from both states are calling for reunification. Although it could lead to a split with Mitteleuropa this might be the one great chance for Great and Little Russia to reunite into a resurgent Greater Russia - a state that confidently can oppose Germanic hegemony in Eastern Europe. And now we got an Ukrainian proposition to reunite. How should we react?"
+ukraine.62.a:0 "Reunification!"
+ukraine.62.b:0 "Do we really need it?"
+ukraine.63.t:0 "Western Ukraine Accepts Our Rule"
+ukraine.63.d:0 "After some time witnessing the efficiency and justice of the union between Russia and the Ukraine, the reluctant inhabitants of the Western parts of the Ukraine have finally accepted the benefits and righteousness of the reunification of Little and Great Russia."
+ukraine.63.a:0 "Great"
+ukraine.64.t:0 "Russia Has Annexed the Ukraine!"
+ukraine.64.d:0 "Terrible news from Ukraine. A pro-Russian government of this country has decided to unify with Russia. We have lost our outpost in the Eastern Europe!"
+ukraine.64.a:0 "It`s war!"
+ukraine.64.b:0 "It`s war!"
+ukraine.64.c:0 "After all... it all belongs to Mother Russia."
+ukraine.67.t:0 "Economical Self-Confidence"
+ukraine.67.d:0 "Since 1918 we have been critically dependent on German goods, which fill our market. On account of this dependency our farmers aren't able to develop their own business and compete with the German farmers, who hold key positions in our economy! We have to reconstruct our national agriculture market and destroy the shameful dependence from German Empire."
+ukraine.67.a:0 "Announce an embargo of German goods!"
+ukraine.67.b:0 "There is no reason to resort to economic warfare"
+ukraine.68.t:0 "Ukrainian Embargo"
+ukraine.68.d:0 "The new Ukrainian nationalist government has decided to critically reduce our participation in their domestic markets. This is another problem for our farmers because Ukraine was a big and perspective outlet for their produces. How should we respond to this unbelievable behaviour of Ukraine?"
+ukraine.68.a:0 "Demand a reversal of this outrageous embargo!"
+ukraine.68.b:0 "Who cares about the Ukrainian market?"
+ukraine.69.t:0 "German Empire Demands an End to the Embargo"
+ukraine.69.d:0 "Our unexpected embargo shocked and angered the German government. The Germans demand that we open our market for them once more, or they won`t consider us a partner of Mitteleuropa any more. But this embargo began to strengthen our economic sphere. What should we do?"
+ukraine.69.a:0 "Comply and remove the embargo."
+ukraine.69.b:0 "Maintain the embargo, we must protect our peasants!"
+ukraine.70.t:0 "First Results of the Embargo"
+ukraine.70.d:0 "Our decision to impose an embargo on German goods to help our national producers has thankfully led to a stabilisation of our agricultural sector. 60-70% of the state and private farms can now be called self-supporting. As a result we can solve other, more difficult problems in our economy, because we have support in the villages and farms."
+ukraine.70.a:0 "The bread's back in the breadbasket of Europe!."
 ### Focuses ###
 
 UKR_Our_Future:0 "Our Future"
@@ -363,6 +393,17 @@ UKR_New_Heir:0 "A successor for the King"
 UKR_New_Heir_desc:0 "Unfortunately, our King has no children and as such he has to choose his successor. Only two candidatures are considered by the government and ministers - the nephew of Vasily, Leo Stefan Habsburg and Daniil Skoropadsky, son of our Hetman. We have to choose one of them."
 UKR_Explosion_Dnieper:0 "Explosion on the Dnieper"
 UKR_Explosion_Dnieper_desc:0 "Today at 11 a.m. when our King Vasily was on his yacht, an explosion rips apart his small ship. Our mass media got a message that the yacht was mined by a syndicalist group, which had decided to keep up its struggle against our government. Unfortunately, there was no chance to save our King, and different political groups want to use this chance and begin to govern Ukraine."
+
+UKR_Friendship_Nations:0 "Friendship of Nations"
+UKR_Friendship_Nations_desc:0 "-"
+UKR_Khrushchyovka:0 "'Khrushchyovka'"
+UKR_Khrushchyovka_desc:0 "-"
+UKR_Pereyaslav_treaty:0 "Treaty of Pereyaslav"
+UKR_Pereyaslav_treaty_desc:0 "-"
+UKR_OUN_Embargo:0 "Embargo on the German goods"
+UKR_OUN_Embargo_desc:0 "-"
+UKR_New_Scientists:0 "New Scientists"
+UKR_New_Scientists_desc:0 "-"
 
 UKR_Ukrainian_Recovery:0 "Ukrainian Recovery"
 UKR_Ukrainian_Recovery_desc:0 "Social problems always provoke political instability. Lots of peasants join the syndicalist, nationalist or Russian separatist because of the awful living conditions. If we want to save Ukraine from the worst, we should start a recovery programme and help the poorest grain-growers in the Central Ukraine and provide our population with the cheap electricity, but we need investments."
