Flag choice for the CSA

--- a/localisation/KR_Combined_Syndicates_of_America_l_english.yml
+++ b/localisation/KR_Combined_Syndicates_of_America_l_english.yml
@@ -571,6 +571,12 @@ combinedsyndicates.108.t:0 "United Socialistic States of America"
 combinedsyndicates.108.d:0 "The United States has been reforged into a centralised republic. The office of president and vice president have been replaced by the offices of General Secretary and Deputy Secretary that are chosen from among the Socialist Party itself. The central government has been strengthened and most of the powers and responsibilities of the state it has taken up. The concept of Democratic Centralism has been established and implemented throughout the government. America has taken a new step into the future and united we shall not fail."
 combinedsyndicates.108.a:0 "Solidarity Forever!"
 
+combinedsyndicates.109.t:0 "A new Flag for America"
+combinedsyndicates.109.d:0 "With the constitutional convention now underway, one of the topics that the delegates have is a new flag for the country. Three new designs have been proposed. The first being the stars and stripes but with the grain and gear symbol in the canton. The second proposal is stripped flag with the grain and gear symbol in the center and a border with stars around the flag. The third is a blue eagle clutching a gear and lighting bolts on a red field. The fourth proposal is to keep the current flag. What shall the people decide on? "
+combinedsyndicates.109.a:0 "Choose the Stars and Stripes flag "
+combinedsyndicates.109.b:0 "Choose the Bordered Stripes flag"
+combinedsyndicates.109.c:0 "Choose the Blue Eagle flag"
+combinedsyndicates.109.e:0 "Choose to keep the current flag"
 
 
 combinedsyndicates.43.t:0 "The New England General Strike"
