Disregard internal focus tree names :P

--- a/localisation/KR_Chile_l_english.yml
+++ b/localisation/KR_Chile_l_english.yml
@@ -135,7 +135,7 @@ CHL_clean_desc:0 "Totalism implies total loyalty, and total devotion to the revo
 CHL_getcounterrev:0 "Ensure Officer Loyalty"
 CHL_getcounterrev_desc:0 "Many officers are still traditionalist and archaic, who might as well be theocrats with their sad devotion to ancient religions. But their priests did not grant them clarvoyance to conjure up an escape from the Revolutionary Courts!"
 CHL_helicopter_rides:0 "Dealing with Traitors"
-CHL_helicopter_rides:_desc:0 "Some indivudals still cling to counterevolutionary ideals, and would never le tthem go. There is a place where they can keep said ideas: The Easter Island. Of course, bad things always happen in such long trips..."
+CHL_helicopter_rides_desc:0 "Some indivudals still cling to counterevolutionary ideals, and would never le tthem go. There is a place where they can keep said ideas: The Easter Island. Of course, bad things always happen in such long trips..."
 CHL_santiago:0 "Direct Rule From Santiago"
 CHL_santiago_desc:0 "The revolution is now Total, and we can share the benefits of our long and arduous efforts. Comrade Labarca and his fellow heroes are to be praised to bring light to darkness!"
 CHL_strenghten_republic:0 "Strengthen the Republic"
