--- a/localisation/KR_Spain_Carlist_l_english.yml
+++ b/localisation/KR_Spain_Carlist_l_english.yml
@@ -11,35 +11,59 @@ CAR_consolidating_spain:0 "Consolidating Spain"
 CAR_consolidating_spain_desc:0 "Our country has been torn apart by inner conflict, and only time will tell if her new regime will be able to keep it afloat."
 
 CAR_domestic_focus:0 "Mending the Rift"
+CAR_domestic_focus_desc:0 "Now that our troubles have ended, it is time to mend the political rift which remains between the monarchists, the working class, and the Carlist regime."
 CAR_oppress_opposition:0 "Crush the Revolutionaries"
+CAR_oppress_opposition_desc:0 "The only way we will ever see permanent peace in Spain is to crush the opposition entirely. They have no place in the new order, and no strength with which to resist us."
 CAR_reconcile_opposition:0 "The Spanish Inquisition"
+CAR_reconcile_opposition_desc:0 "A diplomatic approach is what is required: we must find a place for the socialists and monarchists within our new regime, and work with those members most amenable to reach a compromise which will satisfy all."
 CAR_home_rule:0 "Nobody expects..."
+CAR_home_rule_desc:0 "Spain is, now and forever more, a Catholic state, and we must take measures to ensure it remains that way. This means bringing in Papal authorities and resurrecting the age-old inquisitions - we will root out those who see faith as something of the past, and with that cleansing the worst of our opposition shall be forever silenced."
 
 CAR_industrial_focus:0 "Rebuild the Industry"
+CAR_industrial_focus_desc:0 "Our first order of business is to repair the damage which has been done to the Spanish industrial sector."
 CAR_industry_focus_1:0 "Catalonian Industry"
+CAR_industry_focus_1_desc:0 "Let us focus on resurrecting the industrial strength of the eastern Catalan region."
 CAR_industry_focus_2:0 "Basque Industry"
+CAR_industry_focus_2_desc:0 "Let us focus on resurrecting the industrial strength of the north-eastern Basque region."
 CAR_industry_focus_3:0 "Castillan Industry"
+CAR_industry_focus_3_desc:0 "Let us focus on resurrecting the industrial strength of the central Castille region."
 CAR_mining_focus_1:0 "Portuguese Industrial Exchange Programme"
+CAR_mining_focus_1_desc:0 "An industrial exchange with our Portuguese allies will go a long way towards helping both of us increase our economies."
 CAR_mining_focus_2:0 "Italian Industrial Exchange Programme"
+CAR_mining_focus_2_desc:0 "An industrial exchange with our Italian allies will go a long way towards helping both of us increase our economies."
 CAR_mining_focus_3:0 "National-French Industrial Exchange Programme"
+CAR_mining_focus_3_desc:0 "An industrial exchange with our allies in National France will go a long way towards helping both of us increase our economies."
 CAR_helping_hand_focus:0 "Recovery from the Black Monday"
+CAR_helping_hand_focus_desc:0 "We have suffered more than most from Black Monday, coupled as its effects were with our social upheaval. Now is the time to put it aside forever, and march into the future as a strong and industrial European nation."
 
 CAR_militia_focus:0 "A Catholic Army"
+CAR_militia_focus_desc:0 "Our first order of business is to look to our army - to ensure that it consists of the faithful, and those devoted towards upholding the Carlist regime. We will rebuild an army that encompasses all of Spain, and it will be loyal to the new king, as is right and just."
 CAR_radio_focus:0 "The Word of God"
 CAR_radio_focus_desc:0 "The "Receptador del Pueblo", or "People's Receiver", is a radio receiver produced en masse and distributed among the people freely. This has been the start of a Spanish radio culture."
 CAR_propaganda_focus:0 "Propaganda in the Church"
+CAR_propaganda_focus_desc:0 "We must continue to spread the faith throughout Spain, to make it the number one priority of every citizen no matter what region of the nation they live in."
 CAR_school_focus:0 "Centro de Estudios Universitarios"
+CAR_school_focus_desc:0 "Established in 1933 by the Asociación Católica de Propagandistas, the Centro de Estudios Universitarios is a foundation  for the development of education. It controlled and supported only a few universities like the Universidad de Deusto, but now it will gain control over the entire educational structure of our country."
 
 CAR_military_focus:0 "The Syndicalist Threat"
-CAR_standing_army_focus:0 "A standing Army"
+CAR_military_focus_desc:0 "Our military has one priority: to contain the spread of anarchy and socialism, to purge those who believe in it from our ranks as well as to ensure that foreign influences no longer take hold on Spanish soil."
+CAR_standing_army_focus:0 "A Standing Army"
+CAR_standing_army_focus_desc:0 "We must focus on our army's strength and quality, instead of focusing on expanding into areas we cannot truly afford."
 CAR_infantry_weapon_focus:0 "New Weapons for our Army"
+CAR_infantry_weapon_focus_desc:0 "We must focus on modernising our army's equipment, much of which dates back to the Weltkrieg. This will not do."
 CAR_artillery_focus:0 "Modernise our Artillery"
-CAR_mobile_army_focus:0 "A mobile Army"
+CAR_artillery_focus_desc:0 "Firepower - this is what we most desperately need. The ability to knock down an enemy's fortifications, and to bombard them into senselessness should they dare cross the Pyrenees."
+CAR_mobile_army_focus:0 "A Mobile Army"
+CAR_mobile_army_desc:0 "The ways of footsoldiers and horses will soon be a thing of the past, if they are not already. The cost of equipping our forces with vehicles will be high, but it is necessary."
 CAR_motorisation_focus:0 "Motorised Infantry"
+CAR_motorisation_focus_desc:0 "We must get our soldiers off their feet, and focus on giving them the kind of mobility which will give us an advantage."
 CAR_tank_focus:0 "The Spanish Panzer Corps"
+CAR_tank_focus_desc:0 "Heavy armour - it provides both speed and firepower, and it is our clear path to victory in the wars to come."
 CAR_army_innovation_focus:0 "Army Innovations"
+CAR_army_innovation_desc:0 "Above all else, we must ensure our army has the finest minds behind it to plan our offence and defence. Without them, all the fine equipment in the world will do us nothing."
 
-CAR_education_focus:0 "Centro de Estudios Universitarios"
+CAR_education_focus:0 "Focus on Education"
+CAR_education_focus_desc:0 "We have allowed our differences to impede us for too long. It is time to bring fine Spanish minds together in our universities, and to give them free reign in aiding or great leap forward into the modern era."
 
 CAR_foreign_focus:0 "Renew the Mediterranean Bloc"
 CAR_foreign_focus_desc:0 "As our nation rises from the horrors of the Civil War, we are finding increased faith in the people, of both our government and our glorious armed forces. There has been serious talk amongst the military and national leaders of this country to use our strength to defend our interests across the Mediterranean."
@@ -52,6 +76,7 @@ CAR_invite_portugal_desc:0 "We have maintained diplomatic relations with Portuga
 CAR_invite_france:0 "Invite France"
 CAR_invite_france_desc:0 "We have maintained diplomatic relations with National France even before Javier ascended to the throne. Now, we shall formally propose an alliance."
 CAR_french_restoration:0 "Bring France back to the Continent"
+CAR_french_restoration_desc:0 "Our allies in National France must be restored to their rightful place - it is time to begin the war aggainst the Communard interlopers in the north!"
 
 ### Ideas ###
 CAR_black_monday:0 "Aftermath of the Black Monday"
