BRA_ARG implemented

--- a/localisation/KR_Countries_Cosmetic_l_english.yml
+++ b/localisation/KR_Countries_Cosmetic_l_english.yml
@@ -2235,6 +2235,34 @@ INS_HOL_national_populist:0 "Dutch East Indies"
 INS_HOL_national_populist_ADJ:0 "Indonesian"
 INS_HOL_national_populist_DEF:0 "The Dutch East Indies"
 
+BRA_ARG_market_liberalist:0 "Brazil"
+BRA_ARG_market_liberalist_ADJ:0 "Brazilian"
+BRA_ARG_market_liberalist_DEF:0 "Brazil"
+BRA_ARG_national_populist:0 "Brazilian Transitional Goverment"
+BRA_ARG_national_populist_ADJ:0 "Brazilian"
+BRA_ARG_national_populist_DEF:0 "Brazilian Transitional Goverment"
+BRA_ARG_paternal_autocratist:0 "Brazilian Transitional Goverment"
+BRA_ARG_paternal_autocratist_ADJ:0 "Brazilian"
+BRA_ARG_paternal_autocratist_DEF:0 "Brazilian Transitional Goverment"
+BRA_ARG_radical_socialist:0 "United Communes of Brazil"
+BRA_ARG_radical_socialist_ADJ:0 "Brazilian"
+BRA_ARG_radical_socialist_DEF:0 "United Communes of Brazil"
+BRA_ARG_social_conservatist:0 "Brazil"
+BRA_ARG_social_conservatist_ADJ:0 "Brazilian"
+BRA_ARG_social_conservatist_DEF:0 "Brazil"
+BRA_ARG_social_democratist:0 "Brazil"
+BRA_ARG_social_democratist_ADJ:0 "Brazilian"
+BRA_ARG_social_democratist_DEF:0 "Brazil"
+BRA_ARG_social_liberalist:0 "Brazil"
+BRA_ARG_social_liberalist_ADJ:0 "Brazilian"
+BRA_ARG_social_liberalist_DEF:0 "Brazil"
+BRA_ARG_authoritarian_democrat:0 "Brazilian Transitional Goverment"
+BRA_ARG_authoritarian_democrat_ADJ:0 "Brazilian"
+BRA_ARG_authoritarian_democrat_DEF:0 "Brazilian Transitional Goverment"
+BRA_ARG_totalist:0 "United Communes of Brazil"
+BRA_ARG_totalist_ADJ:0 "Brazilian"
+BRA_ARG_totalist_DEF:0 "United Communes of Brazil"
+
 ##############
 #Vanilla
 ##############
